# ollestra-chess

./: .gitignore  Cargo.toml  README.md
chess_gui/: Cargo.toml  README.md  plan.txt
chess_gui/src/: chess_graphics.rs  chess_graphics_multi.rs  chess_graphics_multi_client.rs  fen_handler.rs  main.rs  network.rs
chess_gui/src/resources/: tmp
schacklib/: Cargo.toml
schacklib/src/: board.rs  errors.rs  fen_parser.rs  game.rs  lib.rs  move_offset.rs  movement_behavior.rs  piece.rs  player.rs  position.rs  square.rs  team.rs
